--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "vigie",
   "type": "module",
   "dependencies": {
-    "hono": "^4.7.8"
+    "hono": "^4.7.8",
+    "inngest": "^3.35.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/vite-plugin": "^0.1.21",
+    "@cloudflare/vite-plugin": "1.1.0",
     "@hono/vite-build": "^1.6.0",
     "@types/bun": "^1.2.10",
     "@types/react": "^19.1.2",
@@ -15,7 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^6.3.3",
-    "wrangler": "^4.13.2"
+    "wrangler": "4.14.1"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
