--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,8 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "vigie",
-  "compatibility_date": "2024-04-01",
+  "compatibility_date": "2025-03-21",
+  "compatibility_flags": ["nodejs_compat"],
   "main": "./src/index.ts",
   "assets": {
     "directory": "./dist"
