--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@cloudflare/vite-plugin": "1.1.0",
     "@hono/vite-build": "^1.6.0",
     "@types/bun": "^1.2.10",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "jest": "^29.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "ts-jest": "^29.3.2",
     "vite": "^6.3.3",
     "wrangler": "4.14.1"
   },
@@ -30,6 +34,7 @@
     "preview": "npm run build && vite preview",
     "fmt": "biome format --write ./src",
     "lint": "biome lint ./src",
-    "lint:fix": "biome lint ./src --write  --unsafe"
+    "lint:fix": "biome lint ./src --write  --unsafe",
+    "test": "jest"
   }
 }
