--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "dependencies": {
     "hono": "^4.7.8",
-    "inngest": "^3.35.1"
+    "inngest": "^3.35.1",
+    "kysely": "^0.28.2",
+    "pg": "^8.15.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -12,10 +14,13 @@
     "@types/bun": "^1.2.11",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.3",
+    "@types/pg": "^8.11.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "dotenv": "^16.5.0",
     "jest": "^29.7.0",
+    "kysely-ctl": "^0.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "ts-jest": "^29.3.2",
