--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vigie",
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "hono": "^4.7.8",
     "inngest": "^3.35.1",
     "kysely": "^0.28.2",
