--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@cloudflare/vite-plugin": "1.1.0",
+    "@dotenvx/dotenvx": "^1.43.0",
     "@hono/vite-build": "^1.6.0",
     "@types/bun": "^1.2.11",
     "@types/jest": "^29.5.14",
