--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
       - main # Trigger deployment only on pushes to the main branch
     paths:
       - 'frontend/**'
-      - 'worker/**'
+      - 'src/**'
       - '.github/workflows/deploy.yml' # Or if the workflow file itself changes
 
 jobs:
@@ -35,6 +35,3 @@ jobs:
           bun run deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          VITE_CLERK_PUBLISHABLE_KEY: ${{ secrets.VITE_CLERK_PUBLISHABLE_KEY }}
-          VITE_POSTHOG_KEY: ${{ secrets.VITE_POSTHOG_KEY }}
-          VITE_POSTHOG_HOST: ${{ secrets.VITE_POSTHOG_HOST }}
