--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.5.0",
     "jest": "^29.7.0",
     "kysely-ctl": "^0.12.2",
+    "miniflare": "^4.20250428.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "ts-jest": "^29.3.2",
